--- a/src/styles/mobile-sm.scss
+++ b/src/styles/mobile-sm.scss
@@ -2,7 +2,6 @@
 @include media-breakpoint-up(sm) {
     html {
         font-size: 1rem;
-        color: rgb(0,0,255);
 
     }
     .navbar-brand {
@@ -21,10 +20,27 @@
         width:  80px;
         background-color:rgb(255, 162, 0);
     }
-   /* #descHold {
-        font-size: 1rem;
-        width: 400px;
-        height: 800px;
+    #descHold {
+        margin-left: 10%;
+        width: 500px;
+        margin-right:0;
 
-    }*/
+
+    }
+    /*
+    #descHold {
+        display: flexbox;
+        background: #333;
+        color: white;
+        font-weight: bold;
+        padding: 4px 8px;
+        //margin: 20px;
+        margin-top: 30px;
+        margin-left: auto;
+        //font-size: 1rem;
+        border: 1px solid grey;
+        border-radius: 20px;
+        width: 300px;
+    }
+    */
 }
