--- a/src/styles/tablet-md.scss
+++ b/src/styles/tablet-md.scss
@@ -21,6 +21,12 @@
         background-color:rgb(238, 238, 42);
 
     }
+    #descHold {
+        margin-left: auto;
+        width: 310px;
+        padding-right: 20px;
+
+    }
    /* #descHold {
         font-size: 1rem;
         width: 400px;
